changed arraylist to linkedlist